--- a/src/azure-cli-core/azure/cli/core/auth/landing_pages/success.html
+++ b/src/azure-cli-core/azure/cli/core/auth/landing_pages/success.html
@@ -10,7 +10,7 @@
         }
 
         code {
-            font-family: 'Courier New', Courier, monospace;
+            font-family: Consolas, 'Liberation Mono', Menlo, Courier, monospace;
             display: inline-block;
             font-weight: bold;
             background-color: rgb(229, 229, 229);
