--- a/src/azure-cli-core/azure/cli/core/auth/landing_pages/success.html
+++ b/src/azure-cli-core/azure/cli/core/auth/landing_pages/success.html
@@ -24,6 +24,10 @@
     <h3>Announcements</h3>
     <p>[Windows only] Starting in May 2023, Azure CLI will authenticate using the <a href="https://learn.microsoft.com/en-us/windows/uwp/security/web-account-manager">Web Account Manager</a> (WAM) broker by default.</p>
     <p>To help us collect feedback on the new login experience, you may opt-in to use WAM by running the following command:</p>
-    <code>az config set core.allow_broker=true</code>
+    <code>
+        az config set core.allow_broker=true<br>
+        az account clear<br>
+        az login
+    </code>
 </body>
 </html>
